--- a/src/com/github/palmeidaprog/financeira/gui/main.fxml
+++ b/src/com/github/palmeidaprog/financeira/gui/main.fxml
@@ -55,7 +55,7 @@
             <VBox alignment="CENTER_LEFT" prefHeight="61.0" prefWidth="771.0" spacing="15.0">
                <children>
                   <RadioButton fx:id="cpfRadio" mnemonicParsing="false" onAction="#cpfRadioSelected" selected="true" text="CPF" />
-                  <RadioButton fx:id="cnpjRadio" mnemonicParsing="false" text="CNPJ" />
+                  <RadioButton fx:id="cnpjRadio" mnemonicParsing="false" onAction="#cnpjRadioSelected" text="CNPJ" />
                </children>
                <VBox.margin>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
