--- a/src/com/github/palmeidaprog/financeira/gui/view_cliente.fxml
+++ b/src/com/github/palmeidaprog/financeira/gui/view_cliente.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -19,22 +21,22 @@
             <Insets left="20.0" right="20.0" top="20.0" />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="39.0" prefWidth="731.0" spacing="2.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="9.0" prefWidth="731.0" spacing="2.0">
          <children>
-            <Label fx:id="primeiroNomeLabel" prefHeight="16.0" prefWidth="112.0" text="Primeiro Nome:" />
+            <Label fx:id="primeiroNomeLabel" prefHeight="16.0" prefWidth="122.0" text="Primeiro Nome:" />
             <Label fx:id="primeiroNomeLabel2" prefHeight="17.0" prefWidth="593.0" />
          </children>
          <VBox.margin>
             <Insets left="20.0" right="20.0" />
          </VBox.margin></HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="39.0" prefWidth="731.0" spacing="2.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="8.0" prefWidth="731.0" spacing="2.0">
          <children>
             <Label fx:id="meioNomeLabel" prefHeight="16.0" prefWidth="112.0" text="Nome do Meio:">
                <HBox.margin>
                   <Insets />
                </HBox.margin>
             </Label>
-            <Label fx:id="meioNomeLabel2" prefHeight="17.0" prefWidth="260.0" />
+            <Label fx:id="meioNomeLabel2" prefHeight="17.0" prefWidth="252.0" />
             <Label fx:id="sobrenomeLabel" prefHeight="16.0" prefWidth="85.0" text="Sobrenome:" />
             <Label fx:id="sobrenomeLabel2" prefHeight="17.0" prefWidth="239.0" />
          </children>
@@ -42,7 +44,7 @@
             <Insets left="20.0" right="20.0" />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="39.0" prefWidth="731.0" spacing="2.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="9.0" prefWidth="731.0" spacing="2.0">
          <children>
             <Label fx:id="cpfLabel" prefHeight="16.0" prefWidth="136.0" text="CPF (Sem pontos):" />
             <Label fx:id="cpfLabel2" prefHeight="17.0" prefWidth="115.0" />
@@ -53,27 +55,38 @@
             <Insets left="20.0" right="20.0" />
          </VBox.margin>
       </HBox>
-      <HBox prefHeight="19.0" prefWidth="731.0" spacing="2.0">
+      <HBox>
          <children>
-            <Label text="Endereco:" />
+            <Separator prefHeight="0.0" prefWidth="741.0" />
          </children>
          <VBox.margin>
-            <Insets left="20.0" right="20.0" />
+            <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="39.0" prefWidth="731.0" spacing="2.0">
+      <HBox prefHeight="9.0" prefWidth="731.0" spacing="2.0">
+         <children>
+            <Label text="Endereco:">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font></Label>
+         </children>
+         <VBox.margin>
+            <Insets bottom="5.0" left="20.0" right="20.0" />
+         </VBox.margin>
+      </HBox>
+      <HBox alignment="CENTER_LEFT" prefHeight="15.0" prefWidth="731.0" spacing="2.0">
          <children>
             <Label prefHeight="16.0" prefWidth="37.0" text="Rua:" />
             <Label fx:id="ruaLabel2" prefHeight="17.0" prefWidth="251.0" />
             <Label prefHeight="16.0" prefWidth="28.0" />
-            <Label text="Complemento:" />
+            <Label prefHeight="8.0" prefWidth="96.0" text="Complemento:" />
             <Label fx:id="complLabel2" prefHeight="17.0" prefWidth="182.0" />
          </children>
          <VBox.margin>
             <Insets left="20.0" right="20.0" />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="39.0" prefWidth="731.0" spacing="2.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="13.0" prefWidth="731.0" spacing="2.0">
          <children>
             <Label text="Bairro:" />
             <Label fx:id="bairroLabel2" prefHeight="17.0" prefWidth="137.0" />
@@ -88,10 +101,10 @@
             <Insets left="20.0" right="20.0" />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="39.0" prefWidth="731.0" spacing="2.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="13.0" prefWidth="731.0" spacing="2.0">
          <children>
             <Label text="Tipo de Endereco:" />
-            <Label fx:id="tipoEndabel2" prefHeight="17.0" prefWidth="88.0" />
+            <Label fx:id="tipoEndLabel2" prefHeight="17.0" prefWidth="88.0" />
             <Label text="Telefone:" />
             <Label fx:id="telefoneLabel2" prefHeight="17.0" prefWidth="140.0" />
             <Label text="Tipo Telefone:" />
@@ -101,7 +114,7 @@
             <Insets left="20.0" right="20.0" />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="39.0" prefWidth="731.0" spacing="2.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="53.0" prefWidth="731.0" spacing="2.0">
          <children>
             <Label prefHeight="16.0" prefWidth="90.0" text="Comentario:" />
             <Label fx:id="comentLabel2" prefHeight="39.0" prefWidth="627.0" />
@@ -109,6 +122,95 @@
          <VBox.margin>
             <Insets left="20.0" right="20.0" />
          </VBox.margin>
+      </HBox>
+      <HBox>
+         <children>
+            <Separator prefHeight="0.0" prefWidth="741.0" />
+         </children>
+         <padding>
+            <Insets bottom="10.0" left="20.0" right="20.0" />
+         </padding>
+      </HBox>
+      <HBox>
+         <children>
+            <Label text="Cadastro:">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+         </children>
+         <VBox.margin>
+            <Insets bottom="5.0" left="20.0" right="20.0" />
+         </VBox.margin>
+      </HBox>
+      <HBox prefHeight="50.0" prefWidth="731.0">
+         <children>
+            <VBox prefHeight="200.0" prefWidth="325.0">
+               <children>
+                  <HBox>
+                     <children>
+                        <Label text="Credito Total:" />
+                        <Label fx:id="credTotalLabel" prefHeight="16.0" prefWidth="154.0" />
+                     </children>
+                  </HBox>
+                  <HBox>
+                     <children>
+                        <Label prefHeight="16.0" prefWidth="109.0" text="Debito Nominal:" />
+                        <Label fx:id="debNomLabel" prefHeight="16.0" prefWidth="188.0" />
+                     </children>
+                  </HBox>
+                  <HBox>
+                     <children>
+                        <Label prefHeight="16.0" prefWidth="199.0" text="Bens Liquido:" />
+                        <Label fx:id="bensLabel" prefHeight="16.0" prefWidth="341.0" />
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+            <VBox>
+               <children>
+                  <HBox>
+                     <children>
+                        <Label text="Credito Disponivel:" />
+                        <Label fx:id="credDispLabel" prefHeight="16.0" prefWidth="188.0" />
+                     </children>
+                  </HBox>
+                  <HBox>
+                     <children>
+                        <Label text="Debito Total:" />
+                        <Label fx:id="debTotLabel" prefHeight="16.0" prefWidth="226.0" />
+                     </children>
+                  </HBox>
+                  <HBox>
+                     <children>
+                        <Label prefHeight="16.0" prefWidth="62.0" text="Rendas:" />
+                        <Label fx:id="rendasLabel" prefHeight="16.0" prefWidth="251.0" />
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+            <VBox alignment="TOP_CENTER">
+               <children>
+                  <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="82.0" text="Editar&#10;Cadastro&#10;" textAlignment="CENTER" />
+               </children>
+            </VBox>
+         </children>
+         <VBox.margin>
+            <Insets bottom="10.0" left="20.0" right="20.0" />
+         </VBox.margin>
+      </HBox>
+      <HBox>
+         <children>
+            <Separator prefHeight="0.0" prefWidth="741.0" />
+         </children>
+         <padding>
+            <Insets bottom="10.0" left="20.0" right="20.0" />
+         </padding>
+      </HBox>
+      <HBox alignment="CENTER" prefHeight="18.0" prefWidth="771.0">
+         <children>
+            <Button mnemonicParsing="false" text="Nova Operacao de Credito" />
+         </children>
       </HBox>
    </children>
 </VBox>
