--- a/src/com/github/palmeidaprog/financeira/gui/main.fxml
+++ b/src/com/github/palmeidaprog/financeira/gui/main.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -29,7 +30,10 @@
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="52.0" prefWidth="129.0" />
-         </children></VBox>
+         </children>
+         <effect>
+            <DropShadow />
+         </effect></VBox>
    </left>
    <center>
       <VBox fx:id="escolherVBox" prefHeight="377.0" prefWidth="447.0" BorderPane.alignment="CENTER">
