--- a/src/com/github/palmeidaprog/financeira/gui/operacoes_gui/view_novo_credito.fxml
+++ b/src/com/github/palmeidaprog/financeira/gui/operacoes_gui/view_novo_credito.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.effect.DropShadow?>
@@ -9,8 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="314.0" prefWidth="591.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <HBox prefHeight="53.0" prefWidth="600.0" style="-fx-background-color: #2f2f2f;" BorderPane.alignment="CENTER">
          <effect>
@@ -31,13 +31,13 @@
    <center>
       <VBox prefHeight="250.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox prefHeight="100.0" prefWidth="200.0">
+            <HBox prefHeight="209.0" prefWidth="600.0">
                <children>
                   <VBox spacing="30.0">
                      <children>
-                        <RadioButton mnemonicParsing="false" text="Emprestimo Pessoal" />
-                        <RadioButton mnemonicParsing="false" text="Financiamento (Imoveis, Automoveis)" />
-                        <RadioButton mnemonicParsing="false" text="Outra Operacao Financeira" />
+                        <RadioButton fx:id="emprestimoPessoalRadio" mnemonicParsing="false" onAction="#emprestimoPessoalRadioSelected" selected="true" text="Emprestimo Pessoal" />
+                        <RadioButton fx:id="financiamentoRadio" mnemonicParsing="false" onAction="#financiamentoRadioSelected" text="Financiamento (Imoveis, Automoveis)" />
+                        <RadioButton fx:id="outraOperacaoRadio" mnemonicParsing="false" onAction="#outraOperacaoRadioSelected" text="Outra Operacao Financeira" />
                      </children>
                   </VBox>
                </children>
@@ -45,8 +45,13 @@
                   <Insets />
                </VBox.margin>
                <padding>
-                  <Insets bottom="40.0" left="120.0" right="40.0" top="75.0" />
+                  <Insets bottom="40.0" left="120.0" right="40.0" top="60.0" />
                </padding>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Button defaultButton="true" mnemonicParsing="false" text="Continuar &gt;" />
+               </children>
             </HBox>
          </children>
       </VBox>
