--- a/src/com/github/palmeidaprog/financeira/gui/operacoes_gui/view_calcula_credito.fxml
+++ b/src/com/github/palmeidaprog/financeira/gui/operacoes_gui/view_calcula_credito.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Separator?>
@@ -39,7 +40,7 @@
                   <Label text="Valor da Operacao:" />
                   <TextField fx:id="valorOpText" onAction="#valorOpLabelAction" onInputMethodTextChanged="#valorOpLabelAction" prefHeight="26.0" prefWidth="141.0" promptText="0.00" />
                   <Label text="Venc.1a Parcela:" />
-                  <TextField fx:id="dataTexto" prefHeight="26.0" prefWidth="109.0" promptText="DD/MM/AAAA" />
+                  <DatePicker fx:id="dataPicker" editable="false" onKeyTyped="#dataPickerAction" prefHeight="26.0" prefWidth="139.0" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="20.0" right="20.0" top="15.0" />
