--- a/src/com/github/palmeidaprog/financeira/gui/cadastro/view_adiciona_automovel.fxml
+++ b/src/com/github/palmeidaprog/financeira/gui/cadastro/view_adiciona_automovel.fxml
@@ -37,7 +37,7 @@
             <HBox alignment="CENTER_LEFT" prefHeight="13.0" prefWidth="600.0" spacing="15.0">
                <children>
                   <Label prefHeight="16.0" prefWidth="52.0" text="Marca:" />
-                  <TextField fx:id="marcaText" onInputMethodTextChanged="#valorOpLabelAction" prefHeight="26.0" prefWidth="370.0" />
+                  <TextField fx:id="marcaText" prefHeight="26.0" prefWidth="370.0" />
                </children>
                <padding>
                   <Insets bottom="5.0" left="20.0" right="20.0" top="15.0" />
