--- a/src/com/github/palmeidaprog/financeira/gui/operacoes_gui/view_novo_credito_outra_operacao.fxml
+++ b/src/com/github/palmeidaprog/financeira/gui/operacoes_gui/view_novo_credito_outra_operacao.fxml
@@ -27,7 +27,7 @@
          <children>
             <Label fx:id="bemLabel" text="Escolha o automovel:" />
             <ComboBox fx:id="bemCombo" prefWidth="150.0" promptText="-" />
-            <Button fx:id="novoBemBtn" mnemonicParsing="false" prefHeight="26.0" prefWidth="145.0" text="Novo Automovel" />
+            <Button fx:id="novoBemBtn" mnemonicParsing="false" onAction="#novoBemBtnClick" prefHeight="26.0" prefWidth="145.0" text="Novo Automovel" />
          </children>
          <padding>
             <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
