[Sync] resolvendo bug do adicionar nova pendencia

--- a/src/com/github/palmeidaprog/financeira/gui/cadastro/AdicionaAutomovelView.fxml
+++ b/src/com/github/palmeidaprog/financeira/gui/cadastro/AdicionaAutomovelView.fxml
@@ -89,7 +89,7 @@
                         </HBox>
                         <HBox alignment="CENTER" prefHeight="38.0" prefWidth="600.0" spacing="20.0">
                            <children>
-                              <Button fx:id="adicPendBtn" mnemonicParsing="false" prefHeight="26.0" prefWidth="197.0" text="Adicionar Pendência" />
+                              <Button fx:id="adicPendBtn" mnemonicParsing="false" onAction="#adicPendBtnClicked" prefHeight="26.0" prefWidth="197.0" text="Adicionar Pendência" />
                               <Button fx:id="delPendBtn" mnemonicParsing="false" prefHeight="26.0" prefWidth="208.0" text="Deletar Selecionada" />
                            </children>
                            <padding>
